# Research_mod2

./: .gitignore  CMakeLists.txt  DoxygenCompile.bat  calculator.cpp  cmake_main.bat  config_file.txt  spdlog_install.bat  test.cpp
data/: Si_DOMCPMAX_LA_100.txt  Si_DOMCPMAX_TA_100.txt  Si_DOS_LA_100.txt  Si_DOS_TA_100.txt  Si_dispersion_48t1.txt  Si_dispersion_48t2.txt  Si_dispersion_LA.txt  Si_dispersion_TA.txt  Si_gvelocity_LA.txt  Si_gvelocity_TA.txt  Si_heatcap_100.txt  Si_heatcap_48neo.txt  Si_heatcap_48t.txt  Si_internal_100.txt  Si_scatconst_LA.txt  Si_scatconst_LA_inf.txt  Si_scatconst_TA.txt  Si_scatconst_TA_inf.txt  Si_temperature_100.txt
data/arcahv/: Si_DOS_LA_48neo.txt  Si_DOS_LA_48t.txt  Si_DOS_TA_48neo.txt  Si_DOS_TA_48t.txt  Si_heatcap_48neo.txt  Si_heatcap_48neo_ronberg10.txt  Si_internal_100.txt  Si_temperature_100.txt
module/: Integral.cpp  Integral.h  Simulation.cpp  Simulation.hpp  band.hpp  band_obj.cpp  band_obj.hpp  brillouin_zone.hpp  brillouin_zone_funcobj.cpp  brillouin_zone_funcobj.hpp  curve.cpp  curve.hpp  logger.cpp  logger.hpp  logger_obj.cpp  logger_obj.hpp  massconst.cpp  massconst.hpp  mcparticle.cpp  mcparticle.hpp  mcparticles.cpp  mcparticles.hpp  modeenum.hpp  physconst.cpp  physconst.hpp  scatconst.cpp  scatconst.hpp  simulation.cpp  simulation.hpp
